# z-forge

./: .gitignore  CIVITAI_DESCRIPTION.md  LICENSE  MANIFEST.in  README.md  __init__.py  model_fetcher.py  presets.py  pyproject.toml  randomizer.py  subject_node.py  yaml_builder.py  z_forge_llm_config.py  z_image_prompt.py
system_prompts/: v3_fantasy_system_prompt.md  v3_system_prompt.md
web/: z_forge.js
web/docs/: ZForgeLLMConfig.md  ZForgePerson.md  ZForgePromptBuilder.md
