[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "z-forge"
version = "0.0.3"
description = "Structured Prompt Compiler for ComfyUI - Build consistent image generation prompts using the v3 variable system"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Z-Forge Contributors"}
]
keywords = ["comfyui", "prompt", "image-generation", "llm", "stable-diffusion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
lmstudio = ["lmstudio"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/your-username/z-forge"
Repository = "https://github.com/your-username/z-forge"
Issues = "https://github.com/your-username/z-forge/issues"

[tool.setuptools]
packages = ["z_forge"]
package-dir = {"z_forge" = "."}

[tool.setuptools.package-data]
z_forge = [
    "system_prompts/*.txt",
    "web/**/*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary operator instead of if-else
]

[tool.ruff.lint.isort]
known-first-party = ["z_forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["tests", "docs", "_bmad"]
skips = ["B101"]  # Skip assert warnings (used in tests)
